--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "Diego Bautista González",
 	"license": "ISC",
 	"dependencies": {
+		"@sequelize/mysql": "^7.0.0-alpha.46",
 		"bcrypt": "^5.1.1",
 		"colors": "^1.4.0",
 		"dotenv": "^16.4.7",
