--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev:api": "nodemon src/index.ts --api",
 		"build": "tsc",
 		"start": "node ./dist/index.js",
-		"test": "jest"
+		"test": "jest --watchAll",
+		"test:coverage": "jest --coverage"
 	},
 	"keywords": [],
 	"author": "Diego Bautista González",
@@ -35,9 +36,11 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/morgan": "^1.9.9",
 		"@types/nodemailer": "^6.4.17",
+		"@types/supertest": "^6.0.3",
 		"jest": "^29.7.0",
 		"node-mocks-http": "^1.16.2",
 		"nodemon": "^3.1.9",
+		"supertest": "^7.1.4",
 		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.2"
